--- a/recipes/oildown.html
+++ b/recipes/oildown.html
@@ -1,1 +1,48 @@
-<h1>oildown</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8"
+    <title></title>
+</head>
+
+<body>
+
+<h1><strong>Oildown</strong></h1>
+<img src="../images/oildown.jpg" alt="A photo of a pot of oildown">
+
+    <h2><strong>Description</strong></h2>
+
+        <p>Today, oil down, which gets its name from the layer of coconut oil and meat juices that settle to the bottom of the cooking pot — is a staple at the family table and at special gatherings, during the annual Carnival bacchanal or simply as a weekend feast.
+           "Oil down is a social thing," says Simeon Cornwall, a television producer who has researched the history of the dish for Grenada's National Museum. "If you're cooking oil down, it's because you have a group of people gathering to eat."</p>
+   
+           <h2><strong>Ingredients</strong></h2>
+        <ul>
+            <li>8-10 dasheen (calallo) leaves</li>
+            <li>1 sprig chive and thyme</li>
+            <li>2 medium carrots chopped</li>
+            <li>1 scotch bonnet (or habenero) pepper</li>
+            <li>1 lb dumplings</li>
+            <li>2 tsp tumeric (saffron)</li>
+            <li>1/2 lb salt meat (pre-soaked overnight)</li>
+            <li>1 large breadfruit</li>
+            <li>2 cups coconut milk</li>
+            <li>1 medium onion</li>
+        </ul>
+
+        <h2><strong>Steps</strong></h2>
+        <ol>
+            <li>Wash and peel breadfruit. Cut into 8 sections. Remove center lengthways of each section and cut into half crosswise.</li>
+            <li>Wash and scrape meat, cut into pieces and rinse in lime juice and water.</li>
+            <li>Put salted meat into cold water, bring to a boil and drain. Repeat 3 times to remove preserving salt. Cook until just tender and drain.</li>
+            <li>Remove skins of onion, rinse and cut into small pieces. Chop dasheen leaves coarsely. Chop chives into small pieces.</li>
+            <li>Saute onion and garlic in hot oil until onion is pale yellow.</li>
+            <li>Mix coconut milk and tumeric.</li>
+            <li>Add all ingredients into large pot, bring to a boil and let simmer for approximately an hour or until liquid is absorbed.</li>
+            <li>Remove pepper.</li>
+            <li>Serve hot.</li>
+        </ol>
+
+    </body>
+
+</html>
