Edit index.html, edit breadpudding.html and peanutpunch.html

--- a/recipes/breadpudding.html
+++ b/recipes/breadpudding.html
@@ -13,7 +13,7 @@
     <h2><strong>Description</strong></h2>
     <p>Bread pudding is a bread-based dessert popular in many countries' cuisines. It is made with stale bread and milk or cream, generally containing eggs, a form of fat such as oil, butter or suet and, depending on whether the pudding is sweet or savory, a variety of other ingredients.</p>
 
-    <h2><steps>Ingredients</steps></h2>
+    <h2><strong>Ingredients</strong></h2>
     <ul>
         <li>1 cup raisins</li>
         <li>1 loaf French bread, at least a day old, cut into 1-inch cubes (about 6-7 cups)</li>
