--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="recipes/oildown.html"><strong>Oildown</strong></a></li>
         <li><a href="recipes/breadpudding.html"><strong>Breadpudding</strong></a></li>
+        <li><a href="recipes/peanutpunch.html"><strong>Peanut Punch</strong></a></li>
 
     </ul>
           
