--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1><strong><em>RECIPES FROM 'THE ISLE OF SPICE' GRENADA</em></strong></h1>
+    <img src="images/Grenada.jpg" alt="Beautiful beach scenery of Grenada">
+
     <ul>
         <li><a href="recipes/oildown.html"><strong>Oildown</strong></a></li>
         <li><a href="recipes/breadpudding.html"><strong>Breadpudding</strong></a></li>
@@ -17,4 +19,4 @@
           
 </body>
 
-</html>
+</html> 
