Edit breadpudding.html, edit oildown.html, edit peanutpunch.html and index.html

--- a/recipes/oildown.html
+++ b/recipes/oildown.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8"
-    <title></title>
+    <meta charset="UTF-8">
+    <title>Oildown</title>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
             <li>Remove pepper.</li>
             <li>Serve hot.</li>
         </ol>
-        
+
     </body>
 
     <a href="../index.html"><strong>Back to main page</strong></a>
