--- a/recipes/breadpudding.html
+++ b/recipes/breadpudding.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Bread Pudding</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
-    <h1><strong>Breadpudding</strong></h1>
-    <img src="../images/Breadpudding.jpg" alt="A slice of breadpudding" width="800" height="600">
+    <h1 class="breadpudding"><strong>Breadpudding</strong></h1>
+    <img src="../images/Breadpudding.jpg" alt="A slice of breadpudding" width="50%" height="auto" class="center">
 
     <h2><strong>Description</strong></h2>
     <p>Bread pudding is a bread-based dessert popular in many countries' cuisines. It is made with stale bread and milk or cream, generally containing eggs, a form of fat such as oil, butter or suet and, depending on whether the pudding is sweet or savory, a variety of other ingredients.</p>
@@ -66,7 +67,9 @@
 
 </body>
 
-<a href="../index.html"><strong>Back to main page</strong></a>
+<button><a href="../index.html"><strong style="font-size: 20px;">Back to main page</strong></a></button>
+<button><a href="peanutpunch.html"><strong style="font-size: 20px;">Peanutpunch</strong></a></button>
+<button><a href="oildown.html"><strong style="font-size: 20px;">Back to Oildown</strong></a></button>
 
 
 </html>
