--- a/recipes/oildown.html
+++ b/recipes/oildown.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Oildown</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
 
-<h1><strong>Oildown</strong></h1>
-<img src="../images/oildown.jpg" alt="A photo of a pot of oildown">
+<h1 class="oildown"><strong>Oildown</strong></h1>
+<img src="../images/oildown.jpg" alt="A photo of a pot of oildown" width="50%" height="auto" class="center">
 
     <h2><strong>Description</strong></h2>
 
@@ -45,6 +46,8 @@
 
     </body>
 
-    <a href="../index.html"><strong>Back to main page</strong></a>
+    <button><a href="../index.html"><strong style="font-size:20px;">Back to main page</strong></a></button> 
+    <button><a href="breadpudding.html"><strong style="font-size: 20px;">Breadpudding</strong></a></button>
+    <button><a href="peanutpunch.html"><strong style="font-size: 20px;">Peanut Punch</strong></a></button>
 
 </html>
