--- a/recipes/peanutpunch.html
+++ b/recipes/peanutpunch.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Peanut Punch</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
-    <h1><strong>Peanut Punch</strong></h1>
-    <img src="../images/Caribbean-peanut-punch.jpg" alt="A jar filled with peanut punch" width="600" height="800">
+    <h1 class="peanutpunch"><strong>Peanut Punch</strong></h1>
+    <img src="../images/Caribbean-peanut-punch.jpg" alt="A jar filled with peanut punch" width="600" height="800" class="center">
 
     <h2><strong>Description</strong></h2>
     <p>Caribbean peanut punch is a refreshing and creamy beverage made from peanuts, condensed milk, water, milk, vanilla and nutmeg.</p>
@@ -36,6 +37,8 @@
 
 </body>
 
-<a href="../index.html"><strong>Back to main page</strong></a>
+<button><a href="../index.html"><strong style="font-size: 20px;">Back to main page</strong></a></button>
+<button><a href="oildown.html"><strong style="font-size: 20px;">Back to Oildown</strong></a></button>
+<button><a href="breadpudding.html"><strong style="font-size: 20px;">Back to Breadpudding</strong></a></button>
 
 </html>
