--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Recipes From 'The Isle Of Spice' Grenada</title>
+    <title id="title">Recipes From 'The Isle Of Spice' Grenada</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1><strong><em>RECIPES FROM 'THE ISLE OF SPICE' GRENADA</em></strong></h1>
-    <img src="images/Grenada.jpg" alt="Beautiful beach scenery of Grenada">
+    <h1 id="title"><strong><em>RECIPES FROM 'THE ISLE OF SPICE' GRENADA</em></strong></h1>
+    <img src="../odin-recipes/images/Grenada_flag.jpeg" alt="Flag of Grenada" height="auto" width="50%" style= "position:absolute; right:500px; opacity:0.5;>
+    
 
-    <ul>
-        <li><a href="recipes/oildown.html"><strong>Oildown</strong></a></li>
-        <li><a href="recipes/breadpudding.html"><strong>Breadpudding</strong></a></li>
-        <li><a href="recipes/peanutpunch.html"><strong>Peanut Punch</strong></a></li>
 
-    </ul>
+        <button><a class="list oildown-list" href="recipes/oildown.html"><strong>Oildown</strong></a></button>
+        <button><a class="list breadpudding-list" href="recipes/breadpudding.html"><strong>Breadpudding</strong></a></button>
+        <button><a class="list peanut_punch-list" href="recipes/peanutpunch.html"><strong>Peanut Punch</strong></a></button>
+
+   
           
 </body>
 
