--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
 <body>
     <h1 id="title"><strong><em>RECIPES FROM 'THE ISLE OF SPICE' GRENADA</em></strong></h1>
-    <img src="../odin-recipes/images/Grenada_flag.jpeg" alt="Flag of Grenada" height="auto" width="50%" style= "position:absolute; right:500px; opacity:0.5;>
+    <img src="../odin-recipes/images/Flag3.jpeg" alt="Flag of Grenada" height="auto" width="50%" style= "position:absolute; right:500px; top:600px; opacity:0.5;">
     
 
 
-        <button><a class="list oildown-list" href="recipes/oildown.html"><strong>Oildown</strong></a></button>
-        <button><a class="list breadpudding-list" href="recipes/breadpudding.html"><strong>Breadpudding</strong></a></button>
-        <button><a class="list peanut_punch-list" href="recipes/peanutpunch.html"><strong>Peanut Punch</strong></a></button>
+        <button class="list oildown-list"><a href="recipes/oildown.html"><strong>Oildown</strong></a></button>
+        <button class="list breadpudding-list"><a href="recipes/breadpudding.html"><strong>Breadpudding</strong></a></button>
+        <button class="list peanut_punch-list"><a href="recipes/peanutpunch.html"><strong>Peanut Punch</strong></a></button>
 
    
           
