--- a/recipes/oildown.html
+++ b/recipes/oildown.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <title>Oildown</title>
     <link rel="stylesheet" href="../styles.css">
+    <style>
+        h2,p,li{
+            color: green;
+        }
+    </style>
 </head>
 
 <body>
@@ -46,8 +51,8 @@
 
     </body>
 
-    <button><a href="../index.html"><strong style="font-size:20px;">Back to main page</strong></a></button> 
-    <button><a href="breadpudding.html"><strong style="font-size: 20px;">Breadpudding</strong></a></button>
-    <button><a href="peanutpunch.html"><strong style="font-size: 20px;">Peanut Punch</strong></a></button>
+    <button class="oildown-list"><a href="../index.html"><strong style="font-size:20px;">Back to main page</strong></a></button> 
+    <button class="breadpudding-list"><a href="breadpudding.html"><strong style="font-size: 20px;">Breadpudding</strong></a></button>
+    <button class="peanut_punch-list"><a href="peanutpunch.html"><strong style="font-size: 20px;">Peanut Punch</strong></a></button>
 
 </html>
