--- a/recipes/peanutpunch.html
+++ b/recipes/peanutpunch.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <title>Peanut Punch</title>
     <link rel="stylesheet" href="../styles.css">
+    <style>
+        body{
+            color: red;
+        }
+    </style>
 </head>
 
 <body>
@@ -37,8 +42,8 @@
 
 </body>
 
-<button><a href="../index.html"><strong style="font-size: 20px;">Back to main page</strong></a></button>
-<button><a href="oildown.html"><strong style="font-size: 20px;">Back to Oildown</strong></a></button>
-<button><a href="breadpudding.html"><strong style="font-size: 20px;">Back to Breadpudding</strong></a></button>
+<button class="oildown-list"><a href="../index.html"><strong style="font-size: 20px;">Back to main page</strong></a></button>
+<button class="breadpudding-list"><a href="oildown.html"><strong style="font-size: 20px;">Back to Oildown</strong></a></button>
+<button class="peanut_punch-list"><a href="breadpudding.html"><strong style="font-size: 20px;">Back to Breadpudding</strong></a></button>
 
 </html>
