--- a/recipes/breadpudding.html
+++ b/recipes/breadpudding.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <title>Bread Pudding</title>
     <link rel="stylesheet" href="../styles.css">
+    <style>
+        body{
+            color: yellow;
+        }
+    </style>
 </head>
 
 <body>
@@ -67,9 +72,9 @@
 
 </body>
 
-<button><a href="../index.html"><strong style="font-size: 20px;">Back to main page</strong></a></button>
-<button><a href="peanutpunch.html"><strong style="font-size: 20px;">Peanutpunch</strong></a></button>
-<button><a href="oildown.html"><strong style="font-size: 20px;">Back to Oildown</strong></a></button>
+<button class="oildown-list"><a href="../index.html"><strong style="font-size: 20px;">Back to main page</strong></a></button>
+<button class="breadpudding-list"><a href="peanutpunch.html"><strong style="font-size: 20px;">Peanutpunch</strong></a></button>
+<button class="peanut_punch-list"><a href="oildown.html"><strong style="font-size: 20px;">Back to Oildown</strong></a></button>
 
 
 </html>
